dark mode UI fixes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,7 +63,7 @@ section {
 
 .program-card:hover {
   transform: translateY(-5px);
-  background-color: var(--green);
+  background-color: var(--green) !important;
   box-shadow: 0 4px 20px rgba(17, 199, 32, 0.5);
   /* on hover top margin 2rem for tooltip  */
   margin-top: 2.4rem;
